tests/compile-fail/duplicate_action.stderr
error: Action `action` can only be reused when all input states, events, and output states have the same data
  --> tests/compile-fail/duplicate_action.rs:3:1
   |
3  | / statemachine! {
4  | |     transitions: {
5  | |         *Init + Event / action = State1(u32),
6  | |
...  |
10 | |     }
11 | | }
   | |_^
   |
   = note: this error originates in the macro `statemachine` (in Nightly builds, run with -Z macro-backtrace for more info)
